[gd_scene load_steps=7 format=2]

[ext_resource path="res://data/backstory/backstory2.PNG" type="Texture" id=1]
[ext_resource path="res://data/backstory/backstory3.PNG" type="Texture" id=2]
[ext_resource path="res://data/backstory/backstory1.PNG" type="Texture" id=3]
[ext_resource path="res://data/backstory/backstory4.PNG" type="Texture" id=4]
[ext_resource path="res://theme.tres" type="Theme" id=5]
[ext_resource path="res://Start/start.gd" type="Script" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="backstory1" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 3 )

[node name="backstory2" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 1 )

[node name="backstory3" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 2 )

[node name="backstory4" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 4 )

[node name="next" type="Button" parent="."]
margin_left = 896.0
margin_top = 544.0
margin_right = 986.0
margin_bottom = 587.0
theme = ExtResource( 5 )
text = "NEXT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
